Bug 1699343: Adjust nsPrinterListWin::SystemDefaultPrinterName to make it infallible, like its CUPS-backed eqivalent. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D109172